buy page background header image fix for width white space for upto 1920-ish width

--- a/app/assets/stylesheets/pages/_buy.sass
+++ b/app/assets/stylesheets/pages/_buy.sass
@@ -3,9 +3,10 @@
 	padding-top: 5em
 	width: 100%
 	min-height: 70vh
+	height: 100%
 	max-height: 100%
 	background: url(image_path('landing-header.png')) no-repeat
-	background-size: auto 100%
+	background-size: auto 120%
 	.ui.inverted.header
 		padding-top: 3em
 		h1
